Day 10: Part two